# on_device_ml_test

./: .gitignore  Dockerfile  README.md  app.vue  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json  sample_text.json  utils.js
pages/: fulltext.vue  index.vue
plugins/: ml_worker.client.ts
public/workers/: Similarity.worker.js  T5ModelEncoder.worker.js
wasm-ml/: Cargo.toml  build.sh
wasm-ml/src/: lib.rs  utils.rs
