[package]
name = "wasm-ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib" , "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies]
candle-core = "0.4.1"
candle-nn = "0.4.1"
candle-transformers = "0.4.1"
num-traits = "0.2.18"
tokenizers = { default-features = false, features = ["unstable_wasm"], git = "https://github.com/huggingface/tokenizers" }

# # App crates.
anyhow = "1.0.80"
byteorder = "1.5.0"
log = "0.4.21"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.114"
safetensors = "0.4.2"
# onig = "6.4.0"

# Wasm specific crates.
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.11"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2"
serde-wasm-bindgen = "0.6.0"

# [dependencies.web-sys]
# version = "0.3.64"
# features = [
#   'Blob',
#   'Document',
#   'Element',
#   'HtmlElement',
#   'Node',
#   'Window',
#   'Request',
#   'RequestCache',
#   'RequestInit',
#   'RequestMode',
#   'Response',
#   'Performance',
# ]